--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body{
     text-align:center ;
 }
 
+.wrapper {
+    width:100%;
+    margin: 0 auto;
+    max-width: 420px;
+}
+
 /*
   ========================================
   Title
